--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,27 @@
 
 <head>
   <title>MoodTracker</title>
+
+  <!-- place this in a head section -->
+  <link rel="apple-touch-icon" href="/images/icon.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/images/icon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/images/icon.png">
+  <link rel="apple-touch-icon" sizes="167x167" href="/images/icon.png">
+
+  <!-- place this in a head section -->
+<meta name="apple-mobile-web-app-capable" content="yes" />
+<link href="/images/ios/ios_loading2048.png" sizes="2048x2732" rel="apple-touch-startup-image" />
+<link href="/images/ios/ios_loading1668.png" sizes="1668x2224" rel="apple-touch-startup-image" />
+<link href="/images/ios/ios_loading1536.png" sizes="1536x2048" rel="apple-touch-startup-image" />
+<link href="/images/ios/ios_loading1125.png" sizes="1125x2436" rel="apple-touch-startup-image" />
+<link href="/images/ios/ios_loading1242.png" sizes="1242x2208" rel="apple-touch-startup-image" />
+<link href="/images/ios/ios_loading750.png" sizes="750x1334" rel="apple-touch-startup-image" />
+<link href="/images/ios/ios_loading640.png" sizes="640x1136" rel="apple-touch-startup-image" />
+
   <link rel="stylesheet" href="/stylesheets/style.css">
   <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
   <link rel="stylesheet" href="/stylesheets/bootstrap-toggle.min.css">
   <link rel="manifest" href="/javascripts/pwa.webmanifest">
-  <link rel="apple-touch-icon" href="/images/icon.png">
 
   <link href="/stylesheets/mdc.css" rel="stylesheet">
   <link href="/stylesheets/style.css" rel="stylesheet">
@@ -39,7 +55,6 @@
 	    </section>
 	  </div>
 	</header>
-
 	<div class="mdc-tab-bar smart-scroll d-none" id="tabbar" role="tablist">
 	  <div class="mdc-tab-scroller">
 	    <div class="mdc-tab-scroller__scroll-area">
@@ -153,7 +168,7 @@
 				<div id="activeResponse" class="d-flex justify-content-around question-responses">
 					<div class="form-check form-check-inline">
 					  <input class="form-check-input" type="radio" name="activeOptions" id="active1" value="1">
-					  <label class="form-check-label" for="active1">Not Active/Relaxing</label>
+					  <label class="form-check-label" for="active1">Not Active/ Relaxing</label>
 					</div>
 					<div class="form-check form-check-inline">
 					  <input class="form-check-input" type="radio" name="activeOptions" id="active2" value="2">
@@ -332,6 +347,28 @@
 	    </div>
 	  </div>
 	</div>
+
+	<div class="modal fade" id="iosInstallModal" tabindex="-1" role="dialog" aria-labelledby="iosInstall" aria-hidden="true">
+	  <div class="modal-dialog modal-dialog-centered" role="document">
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <h5 class="modal-title" id="exampleModalLongTitle">Install MoodTracker</h5>
+	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+	          <span aria-hidden="true">&times;</span>
+	        </button>
+	      </div>
+	      <div class="modal-body">
+	      	<div class="flex"><p>1. Click the share button <img src='/images/ios/share2.png' style="max-height: 6%;max-width: 6%;"></p></div>
+	      	<p>2. Select "Add to Homescreen" <img src='/images/ios/add_to_home.png' style="max-height: 50%;max-width: 50%;"></p>
+	      	<p>3. Click "Add" at the top right</p>
+	      </div>
+	      <div class="modal-footer">
+	        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+	        <button type="button" class="btn btn-success" id="iosOkay">Okay</button>
+	      </div>
+	    </div>
+	  </div>
+	</div>
 </body>
 
 <!-- The core Firebase JS SDK is always required and must be listed first -->
@@ -359,7 +396,7 @@
   // Initialize Firebase
   try {
   	firebase.initializeApp(firebaseConfig);
-  	firebase.analytics();
+  	var FIREBASEANALYTICS = firebase.analytics();
   } catch (e) {
   	console.log("Firebase error... Most likely offline")
   	console.log(e)
