--- a/public/index.html
+++ b/public/index.html
@@ -111,7 +111,7 @@
 			<div class="card card-outer">
 
 				<div class="d-flex card-content">
-					What is your name?
+					What is your username? (Unique name longer than 8 characters)
 				</div>
 
 				<div class="d-flex card-content" style="padding-top:0px;">
